# ml-experiments

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
ml_experiments/: __init__.py  callbacks.py  data_prep.py  enums.py  notify.py
ml_experiments/models/callbacks/: notify.py
tests/: test_notify.py  test_split_dir.py
