[metadata]
name = ml-studio
version = 0.0.1
author = ABDELRAHMAN USAMA
author_email = abdalrhmanusama1@gmail.com
description = Monitor you model training anywhere.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abdalrhmanu/ml-studio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True